[package]
name = "dll_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "inject_me"
path = "src/lib.rs"
crate-type = ["cdylib"]


[[bin]]
name = "injector"
path = "src/main.rs"



[dependencies]
color-eyre = "0.6.3"
dll-syringe = "0.15.2"
log = "0.4.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows-sys = {version = "0.52.0", features = [
                "Win32_Foundation",
                "Win32_System_SystemServices",
                "Win32_UI_WindowsAndMessaging",
                ]}
